# mkdocs-github-release-assets-plugin

./: .gitignore  404.html  LICENSE  README.md  catalog-info.yaml  index.html  mkdocs.yml  pyproject.toml  techdocs_metadata.json
.devcontainer/: devcontainer.json  install-dev-tools.sh
.github/workflows/: build.yml  publish.yml
config/: index.html
docs/: config.md  index.md
releases/: index.html
releases/v0.0.1/: index.html  mkdocs_github_release_assets_plugin-0.0.1-py3-none-any.whl
releases/v0.0.2/: index.html  mkdocs_github_release_assets_plugin-0.0.2-py3-none-any.whl
releases/v0.0.3/: index.html  mkdocs_github_release_assets_plugin-0.0.3-py3-none-any.whl
releases/v0.0.4/: index.html  mkdocs_github_release_assets_plugin-0.0.4-py3-none-any.whl
releases/v0.0.5/: index.html  mkdocs_github_release_assets_plugin-0.0.5-py3-none-any.whl
releases/v0.0.6/: index.html  mkdocs_github_release_assets_plugin-0.0.6-py3-none-any.whl
search/: search_index.json
src/github_release_assets/: __init__.py  github.py  plugin.py
